# DIPS

./: .gitmodules  MSP430-Support.md  README.md
hardware/kicad/: debugger_mcu.kicad_sch  emulator_mcu.kicad_sch  emulator_supply.kicad_sch  int-debugger.kicad_pcb  int-debugger.kicad_pro  int-debugger.kicad_sch  output_translate.kicad_sch  var_psu.kicad_sch
int-debugger-console/: .gitignore  README.md  bmp_traceswo  calibration_pb2.py  debugger_interface_pb2.py  dips_testing.json  helper.py  main.py  makefile  requirements.txt  supply_pb2.py  swolisten  swolisten.c
int-debugger-console/achitectures/: apollo3.svd  msp430fr5969.svd
int-debugger-console/process/: base.py  client.py
int-debugger-console/pydips/: Breakpoints.py  EnergyBreakpoints.py  EnergyBudgetFinder.py  EnergyEmulator.py  EnergyGuard.py  ForwardProgressCheck.py  GdbController.py  IoManager.py  MemCheck.py  PeripheralCheck.py  Profiler.py  memdiff.py  pyGDB.py
int-debugger-emulator/: .gitignore  CMakeLists.txt
int-debugger-emulator-host/: .gitignore  CMakeLists.txt  README.md  buckboostemulator.cpp  buckboostemulator.h  emulator.cpp  emulator.h  emulator.ui  emulatorcomms.cpp  emulatorcomms.h  main.cpp  serialconnection.cpp  serialconnection.h
int-debugger-emulator-host/graph/: chart.cpp  chart.h  chartview.cpp  chartview.h
int-debugger-emulator-host/interface/: readme.md
int-debugger-emulator-host/profiler/: profile.h  profiler.cpp  profiler.h
int-debugger-emulator-host/scripts/: hdf5-remove-compression.py
int-debugger-emulator/apps/: CMakeLists.txt
int-debugger-emulator/apps/hw-test/: CMakeLists.txt  main.c  stm32f3xx_hal_msp.c
int-debugger-emulator/config/: FreeRTOSConfig.h  Makefile.old  STM32F373CCTx_FLASH.ld  protobuf.cmake  sdk-sources.cmake  startup_stm32f373xc.s  stm32f373-toolchain.cmake  stm32f3xx_hal_conf.h  stm32f3xx_it.c
int-debugger-emulator/config/ST/: readme.md  stm32f3xx_it.h
int-debugger-emulator/libs/calibration/: calibration.c  calibration.h
int-debugger-emulator/libs/current-sense/: current-sense.c  current-sense.h
int-debugger-emulator/libs/pc-comms/: pc-comms.c  pc-comms.h
int-debugger-emulator/libs/spi/: spi-dbg.c  spi-dbg.h
int-debugger-emulator/libs/supply/: constant-supply.c  off-supply.c  passive-supply.c  replay-supply.c  sawtooth-supply.c  square-supply.c  supply.c  supply.h  triangle-supply.c
int-debugger-emulator/libs/usb/: readme.md  usb-irc-handler.c
int-debugger-emulator/libs/usb/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
int-debugger-emulator/libs/voltage-sense/: voltage-sense.c  voltage-sense.h
int-debugger-firmware/: .clang-format  .gitignore  platformio.ini
int-debugger-firmware/.github/workflows/: pio.yml
int-debugger-firmware/include/: command.h  crc32.h  exception.h  gdb_hostio.h  gdb_if.h  gdb_main.h  gdb_packet.h  general.h  hex_utils.h  intermittent.h  jtagtap.h  morse.h  platform_support.h  remote.h  rtt.h  rtt_if.h  serialno.h  spi.h  target.h  timing.h  version.h
int-debugger-firmware/include/utils/: delay.h  stopwatch.h
int-debugger-firmware/src/: command.c  crc32.c  exception.c  gdb_hostio.c  gdb_main.c  gdb_packet.c  hex_utils.c  intermittent.c  main.c  morse.c  remote.c  rtt.c  spi.c  timing.c
int-debugger-firmware/src/utils/: delay.c  stopwatch.c
measurements/bfree/: readme.md
measurements/bfree/mem-testing/: memtest-log-19-7-2023.txt
measurements/bfree/periph-testing/: periphtest-log-19-7-2023.txt
measurements/engage/: readme.md
measurements/engage/mem-testing/: memtest-log-15-5-2023.txt
measurements/engage/periph-testing/: periphtest-log-15-5-2023.txt
measurements/engage/progress-testing/: progress-log-15-5-2023.txt  progress-log-backtrace-15-5-2023.txt
measurements/reconnecting/: Dips connection speeds results - .csv  README.md  apollo3.sal  apollo3_part_2.sal  atmel.sal  nrf52.sal  nxp.sal  stm32.sal  stm32_part_2.sal
measurements/userstudy/: README.md  plotter.py  study1.csv  study2.csv
measurements/userstudy/int-debugger-user-study-debugcode/nrf_version/: CMakeLists.txt  platformio.ini
measurements/userstudy/int-debugger-user-study-debugcode/nrf_version/include/: checkpointing.h  fibonacci.h  matrix.h  uart.h
measurements/userstudy/int-debugger-user-study-debugcode/nrf_version/src/: checkpointing.cpp  main.cpp
measurements/userstudy/int-debugger-user-study-debugcode/nrf_version/src/tasks/: fibonacci.cpp  matrix.cpp  uart.cpp
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/: debug.sh  flash.sh
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/bld/: Makefile
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/ext/edb-console/: .gitmodules  edb  edb.py
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/ext/edb-server/: .gitmodules
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/ext/libmspconsole/: .gitignore
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/src/: checkpointing.c  checkpointing.h  main.c
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/src/interfaces/: interface_blink.h  interface_main.h
measurements/userstudy/int-debugger-user-study-debugcode/wisp_version/src/tasks/: adctask.c  adctask.h  blink.c  blink.h  naturalSum.c  naturalSum.h
(+1 files in other folders)
